<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/reviewScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/toiletNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/black"
                android:text="@string/current_toilet"
                android:textSize="28sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/toiletTypeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                tools:text="위치: 성북구 감초동" />

            <com.ich.whereistoilet.presentation.review.TouchFrameLayout
                android:id="@+id/reviewMapFrameLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/review_map_height"
                android:layout_margin="8dp"
                android:name="com.naver.maps.map.MapFragment">
            </com.ich.whereistoilet.presentation.review.TouchFrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/review"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <Spinner
                    android:id="@+id/sortSpinner"
                    android:layout_marginEnd="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="250dp">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/reviewRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"/>
                <TextView
                    android:id="@+id/noReviewTextView"
                    android:text="@string/ment_no_review"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"/>
            </FrameLayout>

            <Button
                android:id="@+id/writeReviewButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:layout_gravity="right"
                android:drawableLeft="@drawable/ic_baseline_create_24"
                android:text="@string/create_review"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/review_detail"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginStart="16dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:text="@string/clean_rate"/>

                <RatingBar
                    android:id="@+id/cleanRatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:text="@string/stars"/>

                <RatingBar
                    android:id="@+id/starsRatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/loadingIndicator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        app:indicatorColor="@color/teal_200"/>
</FrameLayout>